# sqlx_utils

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile
.cargo/: config.toml
examples/: basic_repo.rs
sqlx-utils-macro/: Cargo.toml
sqlx-utils-macro/src/: error.rs  filter.rs  lib.rs
sqlx-utils-macro/src/derive/model/: mod.rs
sqlx-utils-macro/src/types/: columns.rs  condition.rs  expression.rs  filter_sql.rs  filter_table.rs  mod.rs  sql_operator.rs
src/: error.rs  lib.rs  pool.rs  prelude.rs  sqlx.rs  test.rs
src/filter/: mod.rs  operators.rs
src/macros/: mod.rs
src/macros/db/: db_type.rs  mod.rs  repo_static.rs
src/macros/db/sql_filter/: mod.rs  sql_delimiter.rs  sql_impl.rs  sql_operator.rs
src/macros/repository/: delete.rs  mod.rs  update.rs
src/traits/: mod.rs  model.rs  repository.rs  sql_filter.rs
src/traits/repository/: delete.rs  insert.rs  mod.rs  save.rs  select.rs  transaction.rs  update.rs
src/traits/repository/select/: filter.rs  mod.rs
src/traits/repository/transaction/: mod.rs  save_transaction.rs
src/traits/repository/transactions/: delete_tx.rs  insert_tx.rs  mod.rs  save_tx.rs  update_tx.rs
src/types/: db.rs  mod.rs  pool.rs  query.rs
src/utils/: batch.rs  mod.rs
tests/ui/fail/: invalid_not_in_operator.rs  invalid_not_in_operator.stderr  invalid_operator.rs  invalid_operator.stderr  missing_select.rs  missing_select.stderr  missing_table.rs  missing_table.stderr  missing_table_and_operator.rs  missing_table_and_operator.stderr
tests/ui/fail-nightly/: invalid_not_in_operator.rs  invalid_not_in_operator.stderr  invalid_operator.rs  invalid_operator.stderr  missing_select.rs  missing_select.stderr  missing_table.rs  missing_table.stderr  missing_table_and_operator.stderr
tests/ui/fail-try-parse/: invalid_not_in_operator.stderr  invalid_operator.stderr  missing_select.stderr  missing_table.stderr  missing_table_and_operator.stderr
tests/ui/fail-try-parse-nightly/: invalid_not_in_operator.stderr  invalid_operator.stderr  missing_select.stderr  missing_table.stderr  missing_table_and_operator.rs  missing_table_and_operator.stderr
tests/ui/pass/: basic_filter.rs  complex_filter.rs  optional_fields.rs
