[package]
name = "sqlx-utils-macro"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
cfg-if = "1.0.0"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version =  "2.0.99", features = ["full"] }
syn_derive = { version = "0.2.0", features = ["full"] }

[features]
default = ["any", "filter_debug_impl"]
sqlite = []
any = []
postgres = []
mysql = []

filter_debug_impl = []
