[package]
name = "sqlx-utils-macro"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = { version =  "1.0.94", features = [] }
quote = "1.0.39"
syn = { version =  "2.0.99", features = ["full"] }
syn_derive = { version = "0.2.0", features = ["full"] }

[features]
default = ["any", "filter_debug_impl"]
sqlite = []
any = []
postgres = []
mysql = []
nightly = ["proc-macro-error2/nightly"]
try-parse = []
filter-blanket-impl = []

filter_debug_impl = []
