[package]
name = "sqlx-utils-macro"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "^2.0"
proc-macro2 = { version =  "^1.0", features = [] }
quote = "^1.0"
syn = { version =  "^2.0", features = ["full"] }
syn_derive = { version = "^0.2", features = ["full"] }

[features]
default = ["any", "filter_debug_impl"]
sqlite = []
any = []
postgres = []
mysql = []
nightly = ["proc-macro-error2/nightly"]
try-parse = []
filter-blanket-impl = []
debug = ["syn/extra-traits"]

filter_debug_impl = []
